cabal-version: 2.4
name:          hasql-streams-example
version:       0.1.0.0
synopsis:
  An example program that shows how to use Hasql streams with Rel8

homepage:      https://github.com/andremarianiello/hasql-streams
bug-reports:   https://github.com/andremarianiello/hasql-streams/issues
license:       MIT
license-file:  LICENSE
author:        Andre Marianiello
maintainer:    andremarianiello@users.noreply.github.com
copyright:     (c) 2022, Andre Marianiello
category:      Database, PostgreSQL, Hasql, Streaming

executable hasql-streaming
  main-is:          Main.hs
  build-depends:
    , base                     >=4.14   && <4.17
    , bytestring               >=0.10   && <0.12
    , conduit                  ^>=1.3.4
    , hasql                    ^>=1.5.0
    , hasql-streams-conduit    ^>=0.1.0
    , hasql-streams-pipes      ^>=0.1.0
    , hasql-streams-streaming  ^>=0.1.0
    , hasql-streams-streamly   ^>=0.1.0
    , hasql-th                 ^>=0.4.0
    , hasql-transaction        ^>=1.0.1
    , hasql-transaction-io     ^>=0.1.0
    , mtl                      ^>=2.2.2
    , pipes                    ^>=4.3.16
    , rel8                     >=1.2    && <1.4
    , resourcet                ^>=1.2.4
    , safe-exceptions          ^>=0.1.7
    , streaming                ^>=0.2.3
    , streamly                 ^>=0.8.1
    , text                     ^>=1.2.4
    , unliftio-core            ^>=0.2.0

  hs-source-dirs:   app
  default-language: Haskell2010
